syntax = "proto3";

package guardian.sync.v1;

// ============================================================================
// Authentication Service - Self-hosted email/password + device tokens
// ============================================================================

service AuthService {
  // Account registration
  rpc Register(RegisterRequest) returns (RegisterResponse);
  
  // Email/password login
  rpc Login(LoginRequest) returns (LoginResponse);
  
  // Refresh access token
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  
  // Logout (invalidate tokens)
  rpc Logout(LogoutRequest) returns (LogoutResponse);
  
  // Register a device
  rpc RegisterDevice(RegisterDeviceRequest) returns (RegisterDeviceResponse);
  
  // Verify device token
  rpc VerifyDevice(VerifyDeviceRequest) returns (VerifyDeviceResponse);
  
  // List user's devices
  rpc ListDevices(ListDevicesRequest) returns (ListDevicesResponse);
  
  // Revoke device access
  rpc RevokeDevice(RevokeDeviceRequest) returns (RevokeDeviceResponse);
  
  // Change password
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  
  // Request password reset
  rpc RequestPasswordReset(RequestPasswordResetRequest) returns (RequestPasswordResetResponse);
  
  // Complete password reset
  rpc ResetPassword(ResetPasswordRequest) returns (ResetPasswordResponse);
}

// Register
message RegisterRequest {
  string email = 1;
  string password = 2;
  string display_name = 3;
}

message RegisterResponse {
  string account_id = 1;
  string access_token = 2;
  string refresh_token = 3;
  int64 expires_at = 4;
}

// Login
message LoginRequest {
  string email = 1;
  string password = 2;
  string device_id = 3;  // Optional - for device binding
}

message LoginResponse {
  string account_id = 1;
  string access_token = 2;
  string refresh_token = 3;
  int64 expires_at = 4;
  string display_name = 5;
}

// Refresh Token
message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_at = 3;
}

// Logout
message LogoutRequest {
  string refresh_token = 1;
  bool all_devices = 2;  // Logout from all devices
}

message LogoutResponse {
  bool success = 1;
}

// Device Registration
message RegisterDeviceRequest {
  string device_name = 1;
  string device_type = 2;  // desktop, laptop, tablet
  string os_version = 3;
  string hardware_id = 4;  // Machine-specific identifier
}

message RegisterDeviceResponse {
  string device_id = 1;
  string device_token = 2;
  int64 token_expires_at = 3;
}

// Verify Device
message VerifyDeviceRequest {
  string device_token = 1;
}

message VerifyDeviceResponse {
  bool valid = 1;
  string device_id = 2;
  string account_id = 3;
}

// List Devices
message ListDevicesRequest {}

message ListDevicesResponse {
  repeated Device devices = 1;
}

message Device {
  string device_id = 1;
  string device_name = 2;
  string device_type = 3;
  string os_version = 4;
  int64 last_seen = 5;
  bool is_current = 6;
  int64 created_at = 7;
}

// Revoke Device
message RevokeDeviceRequest {
  string device_id = 1;
}

message RevokeDeviceResponse {
  bool success = 1;
}

// Change Password
message ChangePasswordRequest {
  string current_password = 1;
  string new_password = 2;
}

message ChangePasswordResponse {
  bool success = 1;
}

// Password Reset
message RequestPasswordResetRequest {
  string email = 1;
}

message RequestPasswordResetResponse {
  bool success = 1;
  string message = 2;
}

message ResetPasswordRequest {
  string reset_token = 1;
  string new_password = 2;
}

message ResetPasswordResponse {
  bool success = 1;
}
